syntax = "proto3";

package qitmeer.p2p.v1;

message FilterAddRequest {
  bytes data = 1;
}
message FilterClearRequest {
}
message FilterLoadRequest {
  bytes filter = 1;
  int64 hashFuncs = 2;
  int64 tweak = 3;
  int64 flags = 4;
}
message MemPoolRequest {
}
